#77 : use appendToClassPathForInstrumentation to add jars to class path